# Polyglint

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
polyglint/: __main__.py  cli.py  reporter.py  runner.py  violation.py
polyglint/checkers/: __init__.py  base.py  generic_checks.py  js_checker.py  lua_checker.py  paren_checks.py  python_checker.py
tests/: test_generic.py  test_js.py  test_lua.py  test_python.py
