[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "polyglint"
version = "0.1.0"
description = "Universal code style enforcer for Lua, Python, and JavaScript"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
polyglint = "polyglint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
