[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polyglint"
version = "0.4.0"
description = "Universal code style enforcer for Lua, Python, and JavaScript"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
polyglint = "polyglint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
